amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
